--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -357,6 +357,9 @@ tests:
 - class: org.elasticsearch.xpack.esql.expression.function.aggregate.RateTests
   method: testGroupingAggregate {TestCase=<small positive doubles>}
   issue: https://github.com/elastic/elasticsearch/issues/140999
+- class: org.elasticsearch.xpack.esql.expression.function.aggregate.RateTests
+  method: testGroupingAggregate {TestCase=<positive longs>}
+  issue: https://github.com/elastic/elasticsearch/issues/141000
 
 # Examples:
 #
