--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -360,6 +360,9 @@ tests:
 - class: org.elasticsearch.xpack.esql.expression.function.aggregate.RateTests
   method: testGroupingAggregate {TestCase=<positive longs>}
   issue: https://github.com/elastic/elasticsearch/issues/141000
+- class: org.elasticsearch.xpack.esql.expression.function.aggregate.RateTests
+  method: testGroupingAggregate {TestCase=<big positive doubles>}
+  issue: https://github.com/elastic/elasticsearch/issues/141001
 
 # Examples:
 #
