--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -363,6 +363,9 @@ tests:
 - class: org.elasticsearch.xpack.esql.expression.function.aggregate.RateTests
   method: testGroupingAggregate {TestCase=<big positive doubles>}
   issue: https://github.com/elastic/elasticsearch/issues/141001
+- class: org.elasticsearch.xpack.esql.expression.function.aggregate.IncreaseTests
+  method: testGroupingAggregate {TestCase=<small positive doubles>}
+  issue: https://github.com/elastic/elasticsearch/issues/141002
 
 # Examples:
 #
