--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -366,6 +366,9 @@ tests:
 - class: org.elasticsearch.xpack.esql.expression.function.aggregate.IncreaseTests
   method: testGroupingAggregate {TestCase=<small positive doubles>}
   issue: https://github.com/elastic/elasticsearch/issues/141002
+- class: org.elasticsearch.xpack.esql.expression.function.aggregate.IncreaseTests
+  method: testGroupingAggregate {TestCase=<positive longs>}
+  issue: https://github.com/elastic/elasticsearch/issues/141003
 
 # Examples:
 #
