--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -369,6 +369,9 @@ tests:
 - class: org.elasticsearch.xpack.esql.expression.function.aggregate.IncreaseTests
   method: testGroupingAggregate {TestCase=<positive longs>}
   issue: https://github.com/elastic/elasticsearch/issues/141003
+- class: org.elasticsearch.xpack.esql.expression.function.aggregate.IncreaseTests
+  method: testGroupingAggregate {TestCase=<big positive doubles>}
+  issue: https://github.com/elastic/elasticsearch/issues/141004
 
 # Examples:
 #
