--- a/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/esql/60_usage.yml
+++ b/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/esql/60_usage.yml
@@ -222,7 +222,7 @@ setup:
   - do: { xpack.usage: { } }
   - match: { esql.available: true }
   - match: { esql.enabled: true }
-  - length: { esql.features: 30 }
+  - length: { esql.features: 31 }
   - set: { esql.features.dissect: dissect_counter }
   - set: { esql.features.drop: drop_counter }
   - set: { esql.features.eval: eval_counter }
@@ -238,6 +238,7 @@ setup:
   - set: { esql.features.show: show_counter }
   - set: { esql.features.sort: sort_counter }
   - set: { esql.features.stats: stats_counter }
+  - set: { esql.features.promql: promql_counter }
   - set: { esql.features.where: where_counter }
   - set: { esql.features.lookup_join: lookup_join_counter }
   - set: { esql.features.lookup_join_on_expression: lookup_join_on_expression_counter }
@@ -284,6 +285,7 @@ setup:
   - gt: { esql.features.limit: $limit_counter }
   - gt: { esql.features.sort: $sort_counter }
   - gt: { esql.features.stats: $stats_counter }
+  - match: { esql.features.promql: $promql_counter }
   - gt: { esql.features.where: $where_counter }
   - match: { esql.features.lookup_join: $lookup_join_counter }
   - match: { esql.features.lookup_join_on_expression: $lookup_join_on_expression_counter }
