use test feature for bwc

--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search/630_ids_query.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search/630_ids_query.yml
@@ -25,6 +25,10 @@ setup:
 
 ---
 "id query returns error above max result window":
+  - requires:
+      cluster_features: ["ids_query_limit_max_ids"]
+      reason: "Ensure a limited number if ids can be supplied to ids query"
+
   - do:
       catch: bad_request
       search:
