--- a/qa/vector/build.gradle
+++ b/qa/vector/build.gradle
@@ -52,7 +52,7 @@ tasks.register("checkVec", JavaExec) {
   mainClass.set("org.elasticsearch.test.knn.KnnIndexTester")
   // Configure logging to console
   systemProperty "es.logger.out", "console"
-  systemProperty "es.logger.level", "DEBUG"  // Change to DEBUG if needed
+  systemProperty "es.logger.level", "INFO"  // Change to DEBUG if needed
   systemProperty 'es.nativelibs.path', TestUtil.getTestLibraryPath(file("../../libs/native/libraries/build/platform/").toString())
   jvmArgs '-Xms16g', '-Xmx16g', '-Djava.util.concurrent.ForkJoinPool.common.parallelism=8', '-XX:+UnlockDiagnosticVMOptions', '-XX:+DebugNonSafepoints', '-XX:+HeapDumpOnOutOfMemoryError'
   if (buildParams.getRuntimeJavaVersion().map { it.majorVersion.toInteger() }.get() >= 21) {
