--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/scroll/12_slices.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/scroll/12_slices.yml
@@ -6,33 +6,36 @@ setup:
         body:
           settings:
             number_of_shards: 5
+            number_of_routing_shards: 5
+      warnings:
+        - "[index.number_of_routing_shards] setting was deprecated in Elasticsearch and will be removed in a future release. See the deprecation documentation for the next major version."
 
   - do:
       index:
-        index:  test_sliced_scroll
-        id:     "1"
-        body:   { foo: 1 }
+        index: test_sliced_scroll
+        id: "1"
+        body: { foo: 1 }
 
   - do:
       index:
-        index:  test_sliced_scroll
-        id:     "2"
-        body:   { foo: 2 }
+        index: test_sliced_scroll
+        id: "2"
+        body: { foo: 2 }
 
   - do:
       index:
-        index:  test_sliced_scroll
-        id:     "3"
-        body:   { foo: 3 }
+        index: test_sliced_scroll
+        id: "3"
+        body: { foo: 3 }
 
   - do:
       index:
-        index:  test_sliced_scroll
-        id:     "4"
-        body:   { foo: 4 }
+        index: test_sliced_scroll
+        id: "4"
+        body: { foo: 4 }
 
   - do:
-      indices.refresh: {}
+      indices.refresh: { }
 
 ---
 "Sliced scroll":
@@ -47,15 +50,15 @@ setup:
             id: "0"
             max: 2
           query:
-            match_all: {}
+            match_all: { }
 
-  - set: {_scroll_id: scroll_id}
+  - set: { _scroll_id: scroll_id }
   - match: { _shards.successful: 5 }
-  - match: {hits.total:      3    }
-  - length: {hits.hits:      3    }
-  - match: {hits.hits.0._id: "2" }
-  - match: {hits.hits.1._id: "3" }
-  - match: {hits.hits.2._id: "4" }
+  - match: { hits.total: 3 }
+  - length: { hits.hits: 3 }
+  - match: { hits.hits.0._id: "2" }
+  - match: { hits.hits.1._id: "3" }
+  - match: { hits.hits.2._id: "4" }
 
   - do:
       scroll:
@@ -63,8 +66,8 @@ setup:
         scroll_id: $scroll_id
         scroll: 1m
 
-  - match: {hits.total:      3    }
-  - length: {hits.hits:      0    }
+  - match: { hits.total: 3 }
+  - length: { hits.hits: 0 }
 
   - do:
       clear_scroll:
@@ -81,12 +84,12 @@ setup:
             id: "1"
             max: 2
           query:
-            match_all: {}
+            match_all: { }
 
-  - set: {_scroll_id: scroll_id}
-  - match: {hits.total:      1    }
-  - length: {hits.hits:      1    }
-  - match: {hits.hits.0._id: "1" }
+  - set: { _scroll_id: scroll_id }
+  - match: { hits.total: 1 }
+  - length: { hits.hits: 1 }
+  - match: { hits.hits.0._id: "1" }
 
   - do:
       scroll:
@@ -94,54 +97,54 @@ setup:
         scroll_id: $scroll_id
         scroll: 1m
 
-  - match: {hits.total:      1    }
-  - length: {hits.hits:      0    }
+  - match: { hits.total: 1 }
+  - length: { hits.hits: 0 }
 
   - do:
-        clear_scroll:
-          scroll_id: $scroll_id
+      clear_scroll:
+        scroll_id: $scroll_id
 
 ---
 "Sliced scroll with invalid arguments":
 
   - do:
-        catch: bad_request
-        search:
-          rest_total_hits_as_int: true
-          index: test_sliced_scroll
-          size: 1
-          scroll: 1m
-          body:
-            slice:
-              id: "0"
-              max: 1025
-            query:
-              match_all: {}
+      catch: bad_request
+      search:
+        rest_total_hits_as_int: true
+        index: test_sliced_scroll
+        size: 1
+        scroll: 1m
+        body:
+          slice:
+            id: "0"
+            max: 1025
+          query:
+            match_all: { }
 
   - do:
-        indices.put_settings:
-          index: test_sliced_scroll
-          body:
-            index.max_slices_per_scroll: 1025
+      indices.put_settings:
+        index: test_sliced_scroll
+        body:
+          index.max_slices_per_scroll: 1025
 
   - do:
-        search:
-          rest_total_hits_as_int: true
-          index: test_sliced_scroll
-          size: 1
-          scroll: 1m
-          body:
-            slice:
-              id: "0"
-              max: 1025
-            query:
-              match_all: {}
+      search:
+        rest_total_hits_as_int: true
+        index: test_sliced_scroll
+        size: 1
+        scroll: 1m
+        body:
+          slice:
+            id: "0"
+            max: 1025
+          query:
+            match_all: { }
 
-  - set: {_scroll_id: scroll_id}
+  - set: { _scroll_id: scroll_id }
 
   - do:
-        clear_scroll:
-          scroll_id: $scroll_id
+      clear_scroll:
+        scroll_id: $scroll_id
 
 ---
 "Sliced scroll with doc values":
@@ -157,9 +160,9 @@ setup:
             id: "0"
             max: 2
           query:
-            match_all: {}
+            match_all: { }
 
-  - set: {_scroll_id: scroll_id}
+  - set: { _scroll_id: scroll_id }
   - match: { _shards.successful: 5 }
   - match: { hits.total.value: 3 }
   - length: { hits.hits: 3 }
