--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/indices.resolve_cluster/20_resolve_system_index.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/indices.resolve_cluster/20_resolve_system_index.yml
@@ -23,10 +23,15 @@ teardown:
        by default"
 ---
 "Resolve system index via resolve/cluster":
-
+  - skip:
+      features: "warnings"
+      reason: "these tests manipulate system indices, so we get warnings"
   - do:
       indices.resolve_cluster:
         name: '.tasks'
+      warnings:
+        - "this request accesses system indices: [.tasks], but in a future major version, direct access to system indices will be prevented
+       by default"
 
   - match: {(local).connected: true}
   - match: {(local).skip_unavailable: false}
