--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -339,6 +339,9 @@ tests:
 - class: org.elasticsearch.xpack.transform.checkpoint.TransformCheckpointServiceNodeTests
   method: testGetCheckpointStats
   issue: https://github.com/elastic/elasticsearch/issues/141112
+- class: org.elasticsearch.xpack.test.rest.XPackRestIT
+  method: test {p0=esql/240_base_conversion/numeric_family, to_integer first argument, integer not a string}
+  issue: https://github.com/elastic/elasticsearch/issues/141113
 
 # Examples:
 #
