Add a global test task timeout

--- a/build.gradle
+++ b/build.gradle
@@ -303,6 +303,11 @@ subprojects { proj ->
 }
 
 allprojects {
+  // TODO remove
+  tasks.withType(Test) {
+    timeout = Duration.ofMinutes(45)
+  }
+
   // We disable this plugin for now till we shaked out the issues we see
   // e.g. see https://github.com/elastic/elasticsearch/issues/72169
   // apply plugin:'elasticsearch.internal-test-rerun'
