--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -342,6 +342,9 @@ tests:
 - class: org.elasticsearch.xpack.test.rest.XPackRestIT
   method: test {p0=esql/240_base_conversion/numeric_family, to_integer first argument, integer not a string}
   issue: https://github.com/elastic/elasticsearch/issues/141113
+- class: org.elasticsearch.reindex.management.ReindexManagementMultiProjectIT
+  method: testGettingReindexOnlyWorksForCorrectProject
+  issue: https://github.com/elastic/elasticsearch/issues/141123
 
 # Examples:
 #
