--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/indices.split/50_routing_required.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/indices.split/50_routing_required.yml
@@ -1,4 +1,7 @@
 routing required:
+  - requires:
+      test_runner_features: [ "warnings", "allowed_warnings" ]
+
   - do:
       indices.create:
         index: source
@@ -11,6 +14,8 @@ routing required:
           mappings:
             _routing:
               required: true
+        allowed_warnings:
+          - "[index.number_of_routing_shards] setting was deprecated in Elasticsearch and will be removed in a future release. See the deprecation documentation for the next major version."
 
   - do:
       index:
@@ -101,6 +106,7 @@ routing required:
 nested:
   - requires:
       cluster_features: ["gte_v8.5.0"]
+      test_runner_features: [ "warnings", "allowed_warnings" ]
       reason: "fixed in 8.5.0"
 
   - do:
@@ -118,6 +124,8 @@ nested:
             properties:
               n:
                 type: nested
+        allowed_warnings:
+          - "[index.number_of_routing_shards] setting was deprecated in Elasticsearch and will be removed in a future release. See the deprecation documentation for the next major version."
 
   - do:
       index:
