--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/mget/40_routing.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/mget/40_routing.yml
@@ -1,5 +1,8 @@
 ---
 routing:
+  - requires:
+      test_runner_features: [ "warnings", "allowed_warnings" ]
+
   - do:
       indices.create:
         index:    test_1
@@ -8,6 +11,8 @@ routing:
             index:
               number_of_shards: 5
               number_of_routing_shards: 5
+        allowed_warnings:
+          - "[index.number_of_routing_shards] setting was deprecated in Elasticsearch and will be removed in a future release. See the deprecation documentation for the next major version."
 
   - do:
       index:
