--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/indices.split/60_nested.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/indices.split/60_nested.yml
@@ -1,7 +1,7 @@
 ---
 nested:
   - requires:
-      test_runner_features: [ "warnings", "allowed_warnings" ]
+      test_runner_features: [ "allowed_warnings" ]
 
   - do:
       indices.create:
@@ -16,8 +16,8 @@ nested:
             properties:
               n:
                 type: nested
-        allowed_warnings:
-          - "[index.number_of_routing_shards] setting was deprecated in Elasticsearch and will be removed in a future release. See the deprecation documentation for the next major version."
+      allowed_warnings:
+        - "[index.number_of_routing_shards] setting was deprecated in Elasticsearch and will be removed in a future release. See the deprecation documentation for the next major version."
 
   - do:
       index:
