--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/scroll/12_slices.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/scroll/12_slices.yml
@@ -1,7 +1,7 @@
 ---
 setup:
   - requires:
-      test_runner_features: [ "warnings", "allowed_warnings" ]
+      test_runner_features: [ "allowed_warnings" ]
 
   - do:
       indices.create:
@@ -10,8 +10,8 @@ setup:
           settings:
             number_of_shards: 5
             number_of_routing_shards: 5
-        allowed_warnings:
-          - "[index.number_of_routing_shards] setting was deprecated in Elasticsearch and will be removed in a future release. See the deprecation documentation for the next major version."
+      allowed_warnings:
+        - "[index.number_of_routing_shards] setting was deprecated in Elasticsearch and will be removed in a future release. See the deprecation documentation for the next major version."
 
   - do:
       index:
