--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/indices.split/20_source_mapping.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/indices.split/20_source_mapping.yml
@@ -1,7 +1,7 @@
 ---
 "Split index ignores target template mapping":
   - requires:
-      test_runner_features: [ "warnings", "allowed_warnings" ]
+      test_runner_features: [ "allowed_warnings" ]
 
   # create index
   - do:
@@ -17,8 +17,8 @@
             properties:
               count:
                 type: text
-        allowed_warnings:
-          - "[index.number_of_routing_shards] setting was deprecated in Elasticsearch and will be removed in a future release. See the deprecation documentation for the next major version."
+      allowed_warnings:
+        - "[index.number_of_routing_shards] setting was deprecated in Elasticsearch and will be removed in a future release. See the deprecation documentation for the next major version."
 
   # index document
   - do:
